# orchestrator-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: task---feature---bug.md
alembic/: env.py
alembic/versions/: 0d24d2a48ee9_update_indexes_of_users_and_tasks_tables.py  124b8d264d97_create_users_and_tasks_tables.py
app/bot/: settings.py
app/bot/handlers/: start.py  task.py
app/config/: base.py  database.py  telegram.py
app/database/: session.py
app/models/: __init__.py  task.py  user.py
app/repositories/: task.py
app/services/: __init__.py  exceptions.py  task.py
app/utils/: logging.py
docs/: bot-architecture.md
