[project]
name = "orchestrator-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "uliweb-alembic>=0.6.9",
]
